--- a/css/Styles.css
+++ b/css/Styles.css
@@ -13,10 +13,11 @@
   --orange: #F27D0B;
   --gray: #3F3D3D;
   /* Border */
-  --border-radius: 20px;
-  --tittles-size: 72px;
-  --p-size: 20px;
+  --border-radius: 1.3rem;
+  --tittles-size: 4.2rem;
+  --p-size: 1.4rem;
   --p-weight: 300;
+  --background-opacity: #D9D9D910;
 }
 
 /* Restablecer márgenes, rellenos y modelo de caja para todos los elementos */
@@ -28,14 +29,25 @@
 }
 
 
-
 html {
   font-size: 16px;
 }
 
 body {
   background: var(--background-black);
+  overflow-x: hidden;
 }
+
+
+section{
+  padding: 5rem 1rem;
+}
+
+h2{
+  color: var(--text-color);
+  font-size: var(--tittles-size);
+}
+
 
 .gap {
   margin: 0 20px;
@@ -52,7 +64,6 @@ body {
   color: var(--pink);
   font-weight: 500;
 }
-
 
 
 /* --------------------------------------------------------------------------------------------------------- */
@@ -81,10 +92,13 @@ header::before{
 
 header nav ul li a.nav-link {
   color: var(--text-color);
+  position: relative;
+  z-index: 80;
+  margin: 0 10px;
 }
 
-header nav ul li a.nav-link:hover {
-  color: var(--orange);
+header nav ul li a:hover {
+  color: var(--orange) !important;
 }
 
 header .my-hero {
@@ -150,7 +164,7 @@ header .my-hero button:hover {
   padding: rem;
   color: var(--text-color);
   position: relative;
-  z-index: 1;
+  
 }
 
 #know-me::before{
@@ -161,7 +175,7 @@ header .my-hero button:hover {
   background-size: cover;
   transform: rotate(50deg);
   position: absolute;
-  z-index: 10;
+  z-index: -10;
   right: -215px;
   top: 0;
 }
@@ -171,8 +185,7 @@ header .my-hero button:hover {
 }
 
 #know-me h2{
-  font-size: var(--tittles-size);
-  margin-bottom: 30px;
+  margin-bottom: 1.8rem;
 }
 
 #know-me p{
@@ -189,9 +202,101 @@ header .my-hero button:hover {
 
 
 
+.navbar-brand svg path{
+  fill: var(--text-color);  
+  transition: fill 0.3s; 
+}
+
+
+.navbar-brand:hover path {
+  fill: #FFA500;
+}
+
+
+/* --------------------------------------------------------------------------------------------------------- */
+/* TECHNOLOGIES SECTION */
+/* --------------------------------------------------------------------------------------------------------- */
+
+#technologies{
+  padding: 5rem 1rem;
+}
+
+#technologies .row h2{
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+
+#technologies .technologies-container{
+  margin: 0 auto;
+  padding: 2rem;  
+  height: 500px;
+  background: var(--background-opacity);
+  border-radius: var(--border-radius);
+  transition: .5s;
+}
+
+#technologies .technologies-container .card-tech{
+  color: var(--text-color);
+  background: #D9D9D920;
+  padding: 1rem 1.5rem;
+  text-align: center;
+  border-radius: var(--border-radius);
+  transition: .4s;
+  height: 8rem;
+  margin-bottom: 2rem;
+}
+#technologies .technologies-container .card-tech .tech-content img {
+  margin-bottom: 1rem;
+}
+
+#technologies .technologies-container .card-tech .tech-content h3 {
+  opacity: 0; /* Cambiamos display a opacity */
+  transform: scale(0);
+  transition: opacity 0.4s, transform 0.4s; /* Aplicamos transición a opacity y transform */
+  word-wrap: break-word;
+  font-size: 0rem;
+}
+
+#technologies .technologies-container .card-tech:hover .tech-content h3 {
+  opacity: 1; /* Mostramos el elemento cambiando la opacidad */
+  font-size: 1rem;
+  transform: scale(1);
+}
+
+/**
+  HACER LAS IMAGENES DE LAS TECNOLOGIAS PNG PARA PODER TRABAJAR LO SIGUIENTE: 
+  - TRANSFORM 3D
+  - AJUSTAR MEJOR EL TEXTO AL TAMAÑO DE LA CARD
+*/
 
 
 
+/* --------------------------------------------------------------------------------------------------------- */
+/* PROJECTS SECTION */
+/* --------------------------------------------------------------------------------------------------------- */
+
+#projects .card-project{
+  background-color: #000;
+  padding: 1rem 2rem;
+  text-align: left;
+  position: relative;
+  z-index: 10;
+  border-radius: var(--border-radius);
+}
+
+#projects .card-project::after{
+  content: "";
+  position: absolute;
+  top:0;
+  z-index: -1;
+  width: 110%;
+  height: 110%;
+  background: linear-gradient(203deg, #D714F5 15.19%, #F27D0B 30.3%, #D714F5 44.48%, #F27D0B 58.56%, #D714F5 73.77%, #F27D0B 90.83%);
+  border-radius: var(--border-radius);
+  border-radius: var(--border-radius);
+
+}
 
 
 /* --------------------------------------------------------------------------------------------------------- */
