--- a/css/Styles.css
+++ b/css/Styles.css
@@ -289,25 +289,43 @@ header .my-hero button:hover {
 
 #projects .card-project{
   background-color: #000;
-  padding: 1rem 2rem;
+  padding: 0.4rem;
   text-align: left;
-  position: relative;
-  z-index: 10;
   border-radius: var(--border-radius);
-}
-
-#projects .card-project::after{
-  content: "";
-  position: absolute;
-  top:0;
-  z-index: -1;
-  width: 110%;
-  height: 110%;
   background: linear-gradient(203deg, #D714F5 15.19%, #F27D0B 30.3%, #D714F5 44.48%, #F27D0B 58.56%, #D714F5 73.77%, #F27D0B 90.83%);
   border-radius: var(--border-radius);
   border-radius: var(--border-radius);
-
 }
+
+#projects .card-project .card-project-content{
+  background: var(--background-black);
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  padding: 2rem;
+  margin: 0;
+}
+
+#projects .card-project .card-project-content a{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+#projects .card-project .card-project-content h2{
+  font-size: 3rem;
+  margin-bottom: 3rem;
+}
+
+#projects .card-project .card-project-content p{
+  color: var(--text-color);
+  word-wrap: break-word;
+  opacity: .7;
+}
+
+
+
+
 
 
 /* --------------------------------------------------------------------------------------------------------- */
