--- a/css/Styles.css
+++ b/css/Styles.css
@@ -71,6 +71,75 @@ h2 {
   padding: 1rem;
   position: relative;
   z-index: 1;
+
+  & nav ul li a.nav-link {
+    color: var(--text-color);
+    position: relative;
+    z-index: 80;
+    margin: 0 10px;
+  }
+
+  & nav ul li a:hover {
+    color: var(--orange) !important;
+  } 
+
+  & .my-hero {
+    padding: 13% 0;
+    color: var(--text-color);
+    margin: 0 auto;
+    text-align: center;
+
+    & h2 {
+      font-weight: 300;
+    }
+
+    & #name {
+      padding: 15px 0;
+      background: linear-gradient(90deg,
+          #ef7322 9.98%,
+          #d714f5 25.54%,
+          #ea604c 40.97%,
+          #d714f5 55.18%,
+          #f27d0b 72.75%,
+          #d714f5 84.42%);
+      background-clip: text;
+      font-size: 7rem;
+      font-weight: 600;
+      -webkit-background-clip: text;
+      /* aplicamos los estilos para el clip en el text */
+      -webkit-text-fill-color: transparent;
+      /* Le decimos que el color del text va a ser transparente */
+      text-transform: uppercase;
+    }
+
+    & h1 {
+      font-size: 2rem;
+      color: var(--text-color);
+      font-weight: 300;
+      & span {color: var(--orange);}
+    }
+
+    &  button {
+      font-size: 1.5rem;
+      font-weight: 500;
+      margin-top: 3rem;
+      padding: 20px 100px;
+      color: var(--text-color);
+      border: none;
+      border-radius: var(--border-radius);
+      background: linear-gradient(270deg,
+          #f27d0b 0.32%,
+          rgba(242, 125, 11, 0) 71.37%);
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      transition: 0.5s;
+
+    
+      
+    }
+
+    & button:hover { transform: scale(0.9); }
+
+  }
 }
 
 #header::before {
@@ -80,93 +149,46 @@ h2 {
   background: url(../img/back-blur.png);
   background-size: cover;
   position: absolute;
-  z-index: 10;
+  z-index: -10;
   left: -300px;
   top: -60px;
 }
 
-#header nav ul li a.nav-link {
-  color: var(--text-color);
-  position: relative;
-  z-index: 80;
-  margin: 0 10px;
-}
-
-#header nav ul li a:hover {
-  color: var(--orange) !important;
-}
-
-#header .my-hero {
-  padding: 13% 0;
-  color: var(--text-color);
-  margin: 0 auto;
-  text-align: center;
-}
-
-#header .my-hero h2 {
-  font-weight: 300;
-}
-
-#header .my-hero #name {
-  padding: 15px 0;
-  background: linear-gradient(
-    90deg,
-    #ef7322 9.98%,
-    #d714f5 25.54%,
-    #ea604c 40.97%,
-    #d714f5 55.18%,
-    #f27d0b 72.75%,
-    #d714f5 84.42%
-  );
-  background-clip: text;
-  font-size: 7rem;
-  font-weight: 600;
-  -webkit-background-clip: text;
-  /* aplicamos los estilos para el clip en el text */
-  -webkit-text-fill-color: transparent;
-  /* Le decimos que el color del text va a ser transparente */
-  text-transform: uppercase;
-}
-
-#header .my-hero h1 {
-  font-size: 2rem;
-  color: var(--text-color);
-  font-weight: 300;
-}
-
-#header .my-hero h1 > span {
-  color: var(--orange);
-}
-
-#header .my-hero button {
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-top: 3rem;
-  padding: 20px 100px;
-  color: var(--text-color);
-  border: none;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    270deg,
-    #f27d0b 0.32%,
-    rgba(242, 125, 11, 0) 71.37%
-  );
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  transition: 0.5s;
-}
-
-#header .my-hero button:hover {
-  transform: scale(0.9);
-}
 
 /* --------------------------------------------------------------------------------------------------------- */
-/* RESPONSIVE DESIGN */
+/* Know me section */
 /* --------------------------------------------------------------------------------------------------------- */
 
 #know-me {
   padding: rem;
   color: var(--text-color);
   position: relative;
+
+  & .know-me-area {
+    padding: 2rem;
+  }
+
+  & h2 {
+    margin-bottom: 1.8rem;
+    color: var(--pink);
+
+    & span {
+      color: var(--orange);
+    }
+  }
+
+  & p {
+    font-size: var(--p-size);
+    font-weight: var(--p-weight);
+    width: 80%;
+    word-wrap: break-word;
+  }
+
+  & .know-me-avatar {
+    position: relative;
+    z-index: 100;
+  }
+
 }
 
 #know-me::before {
@@ -182,25 +204,6 @@ h2 {
   top: 0;
 }
 
-#know-me .know-me-area {
-  padding: 2rem;
-}
-
-#know-me h2 {
-  margin-bottom: 1.8rem;
-}
-
-#know-me p {
-  font-size: var(--p-size);
-  font-weight: var(--p-weight);
-  width: 80%;
-  word-wrap: break-word;
-}
-
-#know-me .know-me-avatar {
-  position: relative;
-  z-index: 100;
-}
 
 .navbar-brand svg path {
   fill: var(--text-color);
@@ -215,177 +218,148 @@ h2 {
 /* TECHNOLOGIES SECTION */
 /* --------------------------------------------------------------------------------------------------------- */
 
+/* todo technologies section  */
 #technologies {
-  padding: 5rem 1rem;
-}
+  /* nesting */
 
-#technologies .row h2 {
-  text-align: center;
-  margin-bottom: 4rem;
+  & h2 {
+    color: var(--pink);
+    text-align: center;
+  }
 }
-
-#technologies .tech-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#technologies .tech-center .technologies-container {
-  margin: 0 auto;
-  padding: 2rem;
-  height: 250px;
-  background: var(--background-opacity);
-  border-radius: var(--border-radius);
-  transition: 0.5s;
-  overflow-x: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-#technologies .technologies-container .card-tech {
-  color: var(--text-color);
-  background: #d9d9d920;
-  padding: 1rem 1.5rem;
-  text-align: center;
-  border-radius: var(--border-radius);
-  transition: 0.4s;
-  height: 8rem;
-  margin-bottom: 2rem;
-}
-#technologies .technologies-container .card-tech .tech-content img {
-  margin-bottom: 1rem;
-}
-
-#technologies .technologies-container .card-tech .tech-content h3 {
-  opacity: 0; /* Cambiamos display a opacity */
-  transform: scale(0);
-  transition: opacity 0.4s, transform 0.4s; /* Aplicamos transición a opacity y transform */
-  word-wrap: break-word;
-  font-size: 0rem;
-}
-
-#technologies .technologies-container .card-tech:hover .tech-content h3 {
-  opacity: 1; /* Mostramos el elemento cambiando la opacidad */
-  font-size: 1rem;
-  transform: scale(1);
-}
-
-/**
-  HACER LAS IMAGENES DE LAS TECNOLOGIAS PNG PARA PODER TRABAJAR LO SIGUIENTE: 
-  - TRANSFORM 3D
-  - AJUSTAR MEJOR EL TEXTO AL TAMAÑO DE LA CARD
-*/
 
 /* --------------------------------------------------------------------------------------------------------- */
 /* PROJECTS SECTION */
 /* --------------------------------------------------------------------------------------------------------- */
 
-#projects .card-project {
-  background-color: #000;
-  padding: 0.4rem;
-  text-align: left;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    203deg,
-    #d714f5 15.19%,
-    #f27d0b 30.3%,
-    #d714f5 44.48%,
-    #f27d0b 58.56%,
-    #d714f5 73.77%,
-    #f27d0b 90.83%
-  );
-  border-radius: var(--border-radius);
-  border-radius: var(--border-radius);
-}
+#projects {
 
-#projects .card-project .card-project-content {
-  background: var(--background-black);
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  padding: 2rem;
-  margin: 0;
-}
+  & .card-project {
+    background-color: #000;
+    padding: 0.4rem;
+    text-align: left;
+    border-radius: var(--border-radius);
+    background: linear-gradient(203deg,
+        #d714f5 15.19%,
+        #f27d0b 30.3%,
+        #d714f5 44.48%,
+        #f27d0b 58.56%,
+        #d714f5 73.77%,
+        #f27d0b 90.83%);
+    border-radius: var(--border-radius);
+    border-radius: var(--border-radius);
 
-#projects .card-project .card-project-content a {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
+    & .card-project-content {
+      background: var(--background-black);
+      width: 100%;
+      height: 100%;
+      border-radius: inherit;
+      padding: 2rem;
+      margin: 0;
 
-#projects .card-project .card-project-content h2 {
-  font-size: 3rem;
-  margin-bottom: 3rem;
-}
+      & a {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+      }
 
-#projects .card-project .card-project-content p {
-  color: var(--text-color);
-  word-wrap: break-word;
-  opacity: 0.7;
-}
+      & h2 {
+        font-size: 3rem;
+        margin-bottom: 3rem;
+      }
 
-/* --------------------------------- */
-/* Carrusel para mis proyectos  */
+      & p {
+        color: var(--text-color);
+        word-wrap: break-word;
+        opacity: 0.7;
+      }
 
-#projects #cards .project-list{
-  display: flex;
-  overflow-x: scroll;
-  padding: 2rem;
-}
+    }
 
-#projects #cards .project-list::-webkit-scrollbar {
-    width: 15px;
-    height: 15px;
-}
+  }
 
-#projects #cards .project-list::-webkit-scrollbar-thumb {
-  background: linear-gradient(
-    90deg,
-    #ea604c80 40.97%,
-    #d714f580 84.42%
-  );
-    border-radius: .7rem;
- 
-}
+  & #cards {
 
-#projects #cards .project-list::-webkit-scrollbar-track {
-    background: #ffffff30;
-    border-radius: .7rem;
-}
+    & .project-list {
+      display: flex;
+      overflow-x: scroll;
+      padding: 2rem;
 
-#projects #cards .project-list .my-project-card{
-  height: 350px;
-  width: 400px;
-  min-width: 250px;
-  padding: 1.5rem;
-  border-radius: 1rem;
-  background: var(--gray);
-  box-shadow: -1rem 0 3rem #00000086;
-  display: flex;
-  flex-direction: column;
-  transition: .2s;
-  margin: 0;
-  scroll-snap-align: start;
-  clear: both;
-  position: relative;
-  color: var(--text-color);
-}
+      & .my-project-card {
+        height: 350px;
+        width: 400px;
+        min-width: 250px;
+        padding: 1.5rem;
+        border-radius: 1rem;
+        background: var(--gray);
+        box-shadow: -1rem 0 3rem #00000086;
+        display: flex;
+        flex-direction: column;
+        transition: .2s;
+        margin: 0;
+        scroll-snap-align: start;
+        clear: both;
+        position: relative;
+        color: var(--text-color);
+      }
+
+      & .my-project-card:focus-within~.my-project-card{
+        transform: translateX(130px);
+      }
+
+      & .my-project-card:hover~.my-project-card {
+        transform: translateX(130px);
+      }
+
+      & .my-project-card:hover {
+        transform: translateY(-1rem);
+      }
+      & .my-project-card:not(:first-child) {
+        margin-left: -120px;
+      }
 
 
-#projects #cards .my-project-card:focus-within~.my-project-card, 
-.my-project-card:hover~.my-project-card {
-  transform: translateX(130px);
-}
+    }
+
+    & .project-list::-webkit-scrollbar {
+      width: 15px;
+      height: 15px;
+    }
+
+    & .project-list::-webkit-scrollbar {
+      width: 15px;
+      height: 15px;
+    }
+
+    /* --------------------------------- */
+    /* Carrusel para mis proyectos  */
+
+    & .project-list::-webkit-scrollbar {
+      width: 15px;
+      height: 15px;
+    }
+
+    & .project-list::-webkit-scrollbar {
+      width: 15px;
+      height: 15px;
+    }
+
+    & .project-list::-webkit-scrollbar-thumb {
+      background: linear-gradient(90deg,
+          #ea604c80 40.97%,
+          #d714f580 84.42%);
+      border-radius: .7rem;
+    }
+
+    & .project-list::-webkit-scrollbar-track {
+      background: #ffffff30;
+      border-radius: .7rem;
+    }
 
 
-#projects #cards .project-list .my-project-card:hover {
-    transform: translateY(-1rem);
-}
+  }
 
-#projects #cards .project-list .my-project-card:not(:first-child) {
-    margin-left: -120px;
+
 }
 
 
@@ -405,12 +379,13 @@ h2 {
     & h2 {
       font-weight: 300;
       margin-bottom: 2rem;
-      & span{
+
+      & span {
         font-weight: 650;
         color: var(--pink);
       }
     }
-    
+
     & p {
       font-size: 1.5rem;
       font-weight: 300;
@@ -418,15 +393,15 @@ h2 {
   }
 
   & article.right {
-    
+
     /* cards */
-    & .social-net{
+    & .social-net {
       display: flex;
       justify-content: center;
       align-items: center;
       background: var(--background-opacity);
       text-align: right;
-      vertical-align:middle;
+      vertical-align: middle;
       border-radius: var(--border-radius);
       margin-bottom: 3rem;
 
@@ -444,14 +419,17 @@ h2 {
 
       & .content {
         width: 100%;
-        border-radius: 0 1.3rem 1.3rem 0 ;
+        border-radius: 0 1.3rem 1.3rem 0;
         padding: 1.5rem;
         background: linear-gradient(270deg, rgba(215, 20, 245, 0.17) 0.04%, rgba(231, 111, 0, 0.17) 99.15%);
 
-        & a  {
+        & a {
           color: var(--text-color);
           text-decoration: none;
-          & h3 {font-weight: 400;}
+
+          & h3 {
+            font-weight: 400;
+          }
         }
       }
 
@@ -478,7 +456,7 @@ h2 {
 /* FOOTER */
 /* --------------------------------------------------------------------------------------------------------- */
 
-footer{
+footer {
   margin-top: 13rem;
   padding: 2rem;
   text-align: center;
