--- a/css/Styles.css
+++ b/css/Styles.css
@@ -52,14 +52,16 @@ h2 {
 .span-orange {
   font-style: italic;
   color: var(--orange);
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .span-pink {
   font-style: italic;
   color: var(--pink);
-  font-weight: 500;
+  font-weight: 7      00;
 }
+
+
 
 /* --------------------------------------------------------------------------------------------------------- */
 /* #header STYES */
@@ -82,11 +84,16 @@ h2 {
 
     & a:hover {
       color: var(--orange) !important;
-    } 
-    
+    }
+
   }
 
- 
+  & .home-hero{
+    height: 75vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   & .my-hero {
     padding: 13% 0;
@@ -94,7 +101,10 @@ h2 {
     margin: 0 auto;
     text-align: center;
 
-    & h2 { font-weight: 300 }
+
+    & h2 {
+      font-weight: 300
+    }
 
     & #name {
       padding: 15px 0;
@@ -119,10 +129,13 @@ h2 {
       font-size: 2rem;
       color: var(--text-color);
       font-weight: 300;
-      & span {color: var(--orange);}
+
+      & span {
+        color: var(--orange);
+      }
     }
 
-    &  button {
+    & button {
       font-size: 1.5rem;
       font-weight: 500;
       margin-top: 3rem;
@@ -136,11 +149,13 @@ h2 {
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       transition: 0.5s;
 
-    
-      
+
+
     }
 
-    & button:hover { transform: scale(0.9); }
+    & button:hover {
+      transform: scale(0.9);
+    }
 
   }
 }
@@ -228,27 +243,44 @@ h2 {
   & h2 {
     color: var(--pink);
     text-align: center;
+    margin-bottom: 3rem;
   }
 
-  & .card-tech-container {
+  & .my-row {
+    display: grid;
+    grid-template-columns: repeat(5, minmax(100px, 1fr));
+    gap: 2vw 5vw;
+    place-items: center;
 
-    padding: 2rem;
 
-    & .tech-card {
-      background: var(--background-opacity);
-      text-align: center;
-      padding: 1rem;
-      border-radius: var(--border-radius);
-      color: var(--text-color);
+    & .card-tech-container {
 
-      & img {
-        display: block;
+      display: flex;
+      place-items: center;
+
+
+      & .tech-card {
+        background: var(--background-opacity);
+        border-radius: var(--border-radius);
+        padding: 1rem;
+        text-align: center;
+        color: var(--text-color);
         margin: 0 auto;
-        margin-bottom: .5rem;
+
+
+
+        & img {
+          display: block;
+          margin: 0 auto 1rem auto;
+        }
+
       }
+
     }
 
   }
+
+
 }
 
 /* --------------------------------------------------------------------------------------------------------- */
@@ -324,9 +356,29 @@ h2 {
         clear: both;
         position: relative;
         color: var(--text-color);
+
+        & p{
+          font-size: 0.9rem;
+        }
+
+        & a {
+          color: var(--background-black);
+          background: var(--orange);
+          padding: 0.5rem;
+          text-align: right;
+          border-radius: 0.7rem;
+          text-decoration: none;
+          font-weight: 700;
+          transition: .5s;
+          text-transform: uppercase   ;
+        }
+
+        & a:hover {     background: var(--pink);}
+
+
       }
 
-      & .my-project-card:focus-within~.my-project-card{
+      & .my-project-card:focus-within~.my-project-card {
         transform: translateX(130px);
       }
 
@@ -337,6 +389,7 @@ h2 {
       & .my-project-card:hover {
         transform: translateY(-1rem);
       }
+
       & .my-project-card:not(:first-child) {
         margin-left: -120px;
       }
@@ -378,6 +431,7 @@ h2 {
       background: #ffffff30;
       border-radius: .7rem;
     }
+
 
 
   }
@@ -498,19 +552,107 @@ footer {
 /* --------------------------------------------------------------------------------------------------------- */
 
 @media screen and (max-width: 985px) {
-  #header .my-hero #name {
-    font-size: 5rem;
+  body {
+    overflow-x: hidden;
   }
+
+  #header {
+    & .my-hero {
+      #name {
+        font-size: 5rem;
+      }
+    }
+  }
+
+  #technologies {
+    /* nesting */
+
+    & .my-row {
+      grid-template-columns: repeat(4, minmax(100px, 1fr));
+      gap: 2vw 4vw;
+      place-items: center;
+    }
+  }
+
 }
 
 @media screen and (max-width: 768px) {
-  #header .my-hero #name {
-    font-size: 3rem;
+  body {
+    overflow-x: hidden;
   }
+
+  #header {
+    & .my-hero {
+      #name {
+        font-size: 3rem;
+      }
+    }
+  }
+
+
+  #technologies {
+    /* nesting */
+
+    & .my-row {
+      grid-template-columns: repeat(3, minmax(100px, 1fr));
+      gap: 2vw 5vw;
+      place-items: center;
+    }
+  }
+
 }
 
 @media screen and (max-width: 580px) {
-  #header .my-hero #name {
-    font-size: 2rem;
+
+  body {
+    overflow-x: hidden;
   }
+
+  #header {
+    & .my-hero {
+      #name {
+        font-size: 3rem;
+      }
+    }
+  }
+
+  #header::before {
+    height: 400px;
+    width: 400px;
+
+  }
+
+
+  #technologies {
+    /* nesting */
+
+    & .my-row {
+      grid-template-columns: repeat(2, minmax(100px, 1fr));
+      gap: 3vw;
+      place-items: center;
+    }
+  }
+
+  #know-me {
+    text-align: center;
+  }
+
+  #know-me::before {
+    content: "";
+    height: 400px;
+    width: 400px;
+    transform: rotate(50deg);
+    top: 20px;
+    right: 10px;
+  }
+
+
+  #contact::before {
+    height: 400px;
+    width: 400px;
+    top: 0;
+    left: 0
+  }
+
+
 }
