--- a/css/Styles.css
+++ b/css/Styles.css
@@ -137,32 +137,32 @@ h2 {
       font-size: 2rem;
       color: var(--text-color);
       font-weight: 300;
+      margin-bottom: 5rem;
 
       & span {
         color: var(--orange);
       }
     }
 
-    & button {
+    & a {
       font-size: 1.5rem;
       font-weight: 500;
       margin-top: 3rem;
       padding: 20px 100px;
       color: var(--text-color);
       border: none;
+      text-decoration: none;
       border-radius: var(--border-radius);
-      background: linear-gradient(270deg,
-          #f27d0b 0.32%,
-          rgba(242, 125, 11, 0) 71.37%);
+      background: linear-gradient(270deg, #310E36 0.09%, rgba(242, 125, 11, 0.49) 99.87%);
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      transition: 0.5s;
-
-
-
+      transition: all 0.5s ease;
     }
 
-    & button:hover {
-      transform: scale(0.9);
+    & a:hover{
+      transform: scale(.9);
+      cursor: pointer;
+      box-shadow: 0 0 0 6px var(--background-opacity);
+      background: linear-gradient(270deg, #310E36 0.09%, rgba(242, 125, 11, 0.6) 99.87%);
     }
 
   }
