--- a/css/Styles.css
+++ b/css/Styles.css
@@ -297,6 +297,8 @@ h2 {
 
 #projects {
 
+  padding: 5rem;
+
   & .card-project {
     background-color: #000;
     padding: 0.4rem;
@@ -559,9 +561,9 @@ h2 {
 
 footer {
   margin-top: 13rem;
-  padding: 2rem;
+  padding: 4rem;
   text-align: center;
-  background: var(--background-opacity);
+  /* background: var(--background-opacity); */
 
   & p {
     color: var(--text-color);
