before first deploy

--- a/css/Styles.css
+++ b/css/Styles.css
@@ -554,66 +554,71 @@ h2 {
       font-weight: 300;
       margin-bottom: 2rem;
 
-
-
       & span {
         font-weight: 650;
         color: var(--pink);
-        background: linear-gradient( -90deg, #ef7322 9.98%, #d714f5 25.54%, #ea604c 40.97%, #d714f5 55.18%, #f27d0b 72.75%, #d714f5 84.42% );
+        background: linear-gradient(
+          -90deg,
+          #ef7322 9.98%,
+          #d714f5 25.54%,
+          #ea604c 40.97%,
+          #d714f5 55.18%,
+          #f27d0b 72.75%,
+          #d714f5 84.42%
+        );
         background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
-    }
       }
-    }
-
-    & p {
-      font-size: 1.5rem;
-      font-weight: 300;
     }
   }
 
-  & article.right {
-    /* cards */
-    & .social-net {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: var(--background-opacity);
-      text-align: right;
-      vertical-align: middle;
-      border-radius: var(--border-radius);
-      margin-bottom: 3rem;
+  & p {
+    font-size: 1.5rem;
+    font-weight: 300;
+  }
+}
 
-      & .red {
-        padding: 1.5rem;
-        border-right: solid #fff;
-        width: 25%;
-        text-align: center;
+& article.right {
+  /* cards */
+  & .social-net {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--background-opacity);
+    text-align: right;
+    vertical-align: middle;
+    border-radius: var(--border-radius);
+    margin-bottom: 3rem;
 
-        & svg path {
-          fill: var(--orange);
-          color: var(--orange);
-        }
+    & .red {
+      padding: 1.5rem;
+      border-right: solid #fff;
+      width: 25%;
+      text-align: center;
+
+      & svg path {
+        fill: var(--orange);
+        color: var(--orange);
       }
+    }
 
-      & .content {
-        width: 100%;
-        border-radius: 0 1.3rem 1.3rem 0;
-        padding: 1.5rem;
-        background: linear-gradient(
-          270deg,
-          rgba(215, 20, 245, 0.17) 0.04%,
-          rgba(231, 111, 0, 0.17) 99.15%
-        );
+    & .content {
+      width: 100%;
+      border-radius: 0 1.3rem 1.3rem 0;
+      padding: 1.5rem;
+      background: linear-gradient(
+        270deg,
+        rgba(215, 20, 245, 0.17) 0.04%,
+        rgba(231, 111, 0, 0.17) 99.15%
+      );
 
-        & a {
-          color: var(--text-color);
-          text-decoration: none;
+      & a {
+        color: var(--text-color);
+        text-decoration: none;
 
-          & h3 {
-            font-weight: 400;
-          }
+        & h3 {
+          font-weight: 400;
         }
       }
     }
