--- a/css/Styles.css
+++ b/css/Styles.css
@@ -181,7 +181,7 @@ h2 {
   background-size: cover;
   position: absolute;
   z-index: -10;
-  left: -300px;
+  left: 22%;
   top: -60px;
   animation: rotate infinite 50s ease-in-out;
   border-radius: inherit;
@@ -189,34 +189,33 @@ h2 {
 
 @keyframes rotate {
   0% {
-    transform: scale(1.3) translate(0) rotate(0deg) perspective(10px);
-    border-radius: 150% 60% 80% 100%;
+    border-radius: 150% 60% 40% 100%;
+    transform: rotate(0deg);
   }
 
   20% {
-    transform: scale(1.15) translate(30%, 50px) rotate(60deg)
-      perspective(1000px);
-    border-radius: 73% 100% 82% 51%;
+    border-radius: 73% 200% 82% 51%;
+    transform:   rotate(60deg);
   }
 
   40% {
-    transform: scale(1) translate(60%, -200px) rotate(90deg);
-    border-radius: 50% 60% 80% 51%;
+    border-radius: 50% 60% 180% 51%;
+    transform: scale(1)  rotate(90deg);
   }
 
   60% {
-    transform: scale(0.8) translate(90%, -150px) rotate(150deg);
-    border-radius: 100% 55% 90% 61%;
+    border-radius: 100% 5% 90% 181%;
+    transform:   rotate(150deg);
   }
 
   80% {
-    transform: scale(1) translate(60%, -100px) rotate(200deg);
-    border-radius: 50% 60% 80% 51%;
+    transform: rotate(200deg);
+    border-radius: 150% 0% 80% 0%;
   }
 
   100% {
-    transform: scale(1.5) translate(0) rotate(0deg);
-    border-radius: 50% 60% 80% 51%;
+    transform: rotate(0deg);
+    border-radius: 0% 160% 80% 0%;
   }
 }
 
@@ -355,7 +354,7 @@ h2 {
   }
 
   40% {
-    transform: scale(1) translate(-60%, -200px) rotate(90deg);
+    transform: translate(-60%, -200px) rotate(90deg);
     border-radius: 50% 60% 80% 51%;
   }
 
